--- a/meeting-app/package.json
+++ b/meeting-app/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.13.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "date-fns": "^4.1.0",
     "googleapis": "^155.0.0",
     "lucide-react": "^0.536.0",
     "next": "15.4.6",
