--- a/meeting-app/package.json
+++ b/meeting-app/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.13.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "googleapis": "^155.0.0",
     "lucide-react": "^0.536.0",
@@ -20,7 +21,8 @@
     "openai": "^5.12.0",
     "prisma": "^6.13.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
